# charlotte-os

./: .gitignore  .gitmodules  Cargo.toml  Justfile  README.md  aarch64-unknown-none-catten.json  limine.conf  loc.txt  qemu-crash.txt  release  riscv64gc-unknown-none-catten.json  rust-toolchain.toml  rustfmt.toml  session-ses_0b3a.md  x86_64-unknown-none-catten.json
crates/catten/: Cargo.toml  build.rs
crates/catten-aarch64-generic/: Cargo.toml
crates/catten-aarch64-generic/src/: main.rs
crates/catten-aarch64-generic/src/cpu/isa/x86_64/init/: ap.rs
crates/catten-aarch64-generic/src/cpu/isa/x86_64/interrupts/: mod.rs
crates/catten-aarch64-generic/src/cpu/isa/x86_64/timers/: tsc.rs
crates/catten-aarch64-generic/src/cpu/multiprocessor/: ipi.rs  mod.rs
crates/catten-aarch64-generic/src/cpu/scheduler/threads/: mod.rs
crates/catten-graft/: Cargo.toml
crates/catten-graft/src/: charlotte.rs  lib.rs  log_store.rs  node.rs  state_machine.rs  transport.rs  types.rs  wire.rs
crates/catten-rt/: Cargo.toml
crates/catten-rt/src/: config.rs  lib.rs
crates/catten-services/: Cargo.toml  build.rs  link.x
crates/catten-services/src/: lib.rs
crates/catten-syscall/: Cargo.toml
crates/catten-syscall/src/: lib.rs
crates/catten-user/: Cargo.toml  aarch64-unknown-none.json  link.x
crates/catten-user/src/: main.reactor.rs  main.rs
crates/catten/.cargo/: config.toml
crates/catten/linker/: aarch64.ld  riscv64.ld  x86_64.ld
crates/catten/src/: debug_trace.rs  demo.rs  main.rs  panic.rs
crates/catten/src/common/: mod.rs
crates/catten/src/common/collections/: id_table.rs
crates/catten/src/common/sync/: mod.rs
crates/catten/src/completion/: cq.rs  mod.rs
crates/catten/src/cpu/: mod.rs
crates/catten/src/cpu/interrupt_routing/: mod.rs
crates/catten/src/cpu/isa/: mod.rs
crates/catten/src/cpu/isa/aarch64/: mod.rs
crates/catten/src/cpu/isa/aarch64/constants/: interrupt_vectors.rs  (+1 more)
crates/catten/src/cpu/isa/x86_64/: mod.rs
crates/catten/src/cpu/multiprocessor/: cpu_topology.rs  interrupt_depth.rs  ipi.rs  lp.rs  mod.rs  shard_mailbox.rs  startup.rs
crates/catten/src/cpu/multiprocessor/interrupt_tracking/: int_save_restore.rs  interrupt_depth.rs  mod.rs
crates/catten/src/cpu/multiprocessor/spin/: mod.rs  mutex.rs  per_lp.rs  rwlock.rs  shard_local.rs
crates/catten/src/cpu/scheduler/: mod.rs
crates/catten/src/cpu/scheduler/lp_schedulers/: mod.rs  round_robin.rs  strategy.rs
crates/catten/src/cpu/scheduler/sync/: mod.rs
crates/catten/src/cpu/scheduler/system_scheduler/: mod.rs  waker.rs
crates/catten/src/cpu/scheduler/threads/: mod.rs  waker.rs
crates/catten/src/deferred/: mod.rs
crates/catten/src/deferred_work_manager/: mod.rs
crates/catten/src/device/: mod.rs
crates/catten/src/device_management/: mod.rs
crates/catten/src/device_management/drivers/: mod.rs
crates/catten/src/device_management/drivers/busses/: mod.rs
crates/catten/src/device_management/drivers/endpoints/: mod.rs
crates/catten/src/device_management/drivers/input_ctlr/: mod.rs
crates/catten/src/device_management/drivers/uart/: mod.rs
crates/catten/src/device_management/drivers/usb_hci/: ehci.rs  mod.rs  xhci.rs
crates/catten/src/device_management/hw_interface/: mod.rs
crates/catten/src/device_management/topology/: mod.rs
crates/catten/src/device_management/topology/fixed_io/: mod.rs
crates/catten/src/device_manager/: mod.rs
crates/catten/src/device_manager/fixed_io/: mod.rs
crates/catten/src/device_manager/pcie/: mod.rs
crates/catten/src/drivers/: mod.rs
crates/catten/src/drivers/busses/: mod.rs
crates/catten/src/drivers/busses/pci/: mod.rs  pcie.rs
crates/catten/src/drivers/busses/pci_express/: mod.rs  pcie.rs  topology.rs
crates/catten/src/drivers/busses/pcie/: ecam.rs  mod.rs
crates/catten/src/drivers/uart/: arm_pl011.rs  mod.rs
crates/catten/src/drivers/uart/ns16550/: mod.rs
crates/catten/src/dwm/: mod.rs
crates/catten/src/environment/: devicetree.rs  mod.rs
crates/catten/src/environment/acpi/: mod.rs  uacpi_kernel.rs
crates/catten/src/environment/acpi/aml/: mod.rs
crates/catten/src/environment/acpi/sdt/: fadt.rs  madt.rs  mcfg.rs  mod.rs
crates/catten/src/environment/acpi/static_data/: fadt.rs  mcfg.rs  mod.rs
crates/catten/src/environment/boot_protocol/: limine.rs
crates/catten/src/environment/riscv_sbi/: mod.rs
crates/catten/src/event/: mod.rs
crates/catten/src/framebuffer/: console.rs  framebuffer.rs
crates/catten/src/init/: mod.rs
crates/catten/src/ipc/: mod.rs
crates/catten/src/klib/: bitwise.rs  mod.rs
crates/catten/src/klib/collections/: boxed_slice.rs  circular_queue.rs  id_table.rs
crates/catten/src/klib/observer/: combinators.rs  mod.rs
crates/catten/src/klib/sync/: mod.rs
crates/catten/src/klib/time/: duration.rs
crates/catten/src/lib/sync/: mod.rs
crates/catten/src/lib/time/: duration.rs
crates/catten/src/log/: chars.rs  flanterm.rs  mod.rs  serial.rs  serial_x86.rs
crates/catten/src/memory/: mod.rs  object.rs
crates/catten/src/memory/allocators/: global_allocator.rs  memory.rs  mod.rs  stack_allocator.rs
crates/catten/src/memory/linear/: address_map.rs  mod.rs
crates/catten/src/memory/physical/: mod.rs
crates/catten/src/self_test/: adversarial.rs  cclient.elf  client.elf  completion.rs  cq.rs  cq_completion.rs  cq_wait.rs  device.rs  echo.elf  el0.rs  el0_demo.rs  el0_ipc.asm  el0_ipc.rs  el0_ipc_block.asm  el0_ipc_cross_as.asm  el0_ipc_memory.asm  el0_ipc_memory_cancel.asm  el0_ipc_memory_copy.asm  el0_net.rs  el0_pingpong.asm  el0_pingpong.rs  el0_raft.rs  el0_service.rs  el0_sitas.rs  el0_uart.rs  ipc.rs  ipi.rs  mod.rs  nclient.elf  net.elf  ns.elf  raft.elf  scheduler_lifecycle.rs  servicemgr.elf  shard.rs  sitas-user.elf  syscall.rs  tcpip.elf  uart.elf
crates/catten/src/self_test/memory/: allocator.rs  mod.rs  object.rs  pmem.rs  vmem.rs
crates/catten/src/service/: bootstrap.rs  loader.rs  mod.rs  supervisor.rs
crates/catten/src/syscall/: mod.rs
crates/catten/src/timers/: mod.rs
crates/charlotte-smoltcp/: Cargo.toml
crates/charlotte-smoltcp/src/: lib.rs
(+188 files in other folders)
