[package]
name = "catten-rt"
version = "0.1.0"
edition = "2024"
description = "Minimal runtime (crt0) for CharlotteOS userspace programs"

[lib]
name = "catten_rt"
path = "src/lib.rs"
test = false
bench = false

[dependencies]
charlotte-launch = { path = "../charlotte-launch" }
catten-syscall = { path = "../catten-syscall" }
talc = { version = ">=5.0.3", default-features = false, features = ["nightly"] }
spin = { version = "0.9", features = ["lock_api"] }
