[package]
name = "catten-services"
version = "0.1.0"
edition = "2024"
description = "Reference EL0 service programs: name service, echo service, client"

[lib]
name = "catten_services"
path = "src/lib.rs"
test = false
bench = false

[[bin]]
name = "ns"
path = "src/bin/ns.rs"
test = false
bench = false

[[bin]]
name = "echo"
path = "src/bin/echo.rs"
test = false
bench = false

[[bin]]
name = "client"
path = "src/bin/client.rs"
test = false
bench = false

[[bin]]
name = "uart"
path = "src/bin/uart.rs"
test = false
bench = false

[[bin]]
name = "cclient"
path = "src/bin/cclient.rs"
test = false
bench = false

[[bin]]
name = "net"
path = "src/bin/net.rs"
test = false
bench = false

[[bin]]
name = "nclient"
path = "src/bin/nclient.rs"
test = false
bench = false

[[bin]]
name = "tcpip"
path = "src/bin/tcpip.rs"
test = false
bench = false

[[bin]]
name = "raft"
path = "src/bin/raft.rs"
test = false
bench = false

[[bin]]
name = "relmsg"
path = "src/bin/relmsg.rs"
test = false
bench = false

[dependencies]
catten-rt = { path = "../catten-rt" }
charlotte-protocol-net = { path = "../charlotte-protocol-net" }
charlotte-protocol-msg = { path = "../charlotte-protocol-msg" }
charlotte-smoltcp = { path = "../charlotte-smoltcp" }
smoltcp = { version = "0.13", default-features = false, features = ["alloc", "medium-ethernet", "proto-ipv4", "proto-ipv6", "socket-raw", "socket-udp", "socket-tcp"] }
catten-syscall = { path = "../catten-syscall" }
catten-graft = { path = "../catten-graft" }

[profile.dev]
panic = "abort"
opt-level = "s"
lto = true

[profile.release]
panic = "abort"
opt-level = "s"
lto = true


[[bin]]
name = "servicemgr"
path = "src/bin/servicemgr.rs"
test = false
bench = false
