[package]
name = "catten-user"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "catten-user"
path = "src/main.rs"
test = false
bench = false

[dependencies]
# sitas-core and sitas-charlotte are removed for now; they do not yet build
# against a no_std target. The current main.rs uses raw syscall wrappers
# (core::arch::asm!) directly. Re-add them once sitas-core compiles no_std.

[profile.dev]
panic = "abort"
opt-level = "s"
lto = true

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
