[package]
name = "catten-user"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "catten-user"
path = "src/main.rs"
test = false
bench = false

[dependencies]
sitas-core = { path = "../../../../gautelis/sitas/crates/sitas-core" }
sitas-charlotte = { path = "../../../../gautelis/sitas/crates/sitas-charlotte" }
talc = { version = ">=5.0.3", default-features = false, features = ["nightly"] }
spin = { version = "0.9", features = ["lock_api"] }

[profile.dev]
panic = "abort"
opt-level = "s"
lto = true

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
