[package]
name = "catten-user"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "catten-user"
path = "src/main.rs"
test = false
bench = false

[dependencies]
catten-rt = { path = "../catten-rt" }
catten-syscall = { path = "../catten-syscall" }
sitas-core = { path = "../../../../gautelis/sitas/crates/sitas-core" }
sitas-charlotte = { path = "../../../../gautelis/sitas/crates/sitas-charlotte" }

[profile.dev]
panic = "abort"
opt-level = "s"
lto = true

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
