[package]
name = "catten"
version = "0.8.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "catten"
path = "src/main.rs"
test = false
bench = false

[features]
default = ["acpi"]

acpi = []
devicetree = ["dep:flat_device_tree"]
legacy_com_ports = []
yield_trace = []
virtio_gpu = []
qemu = ["legacy_com_ports", "virtio_gpu"]

[dependencies]
limine = { version = ">=0.6.3" }
lock_api = { version = ">=0.4.14", features = ["nightly"] }
concurrent-queue = { version = "2.5.0", default-features = false }
hashbrown = { version = ">=0.16.0", features = ["nightly"] }
spin = { version = ">=0.10.0", features = ["lock_api"] }
talc = { version = ">=5.0.3", features = ["nightly", "counters"] }
flat_device_tree = { version = "3.1.1", optional = true }
